kubernetes/deployment.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "k8s-node"
  namespace: "efk"
  labels:
    app: "k8s-node"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "k8s-node"
  template:
    metadata:
      labels:
        app: "k8s-node"
    spec:
      containers:
        - name: "k8s-hello-node"
          image: "853931821519.dkr.ecr.us-east-1.amazonaws.com/devsecops-registry"
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      imagePullSecrets:
      - name: ecr-secret
