kubernetes/node.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsecops-deployment
  labels:
    app: devsecops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsecops
  template:
    metadata:
      labels:
        app: devsecops
    spec:
      containers:
      - name: webapp
        image: 853931821519.dkr.ecr.us-east-1.amazonaws.com/devsecops-registry:nodeapp
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      imagePullSecrets:
      - name: ecr-secret
