kubernetes/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-node-nodeport
  labels:
    app: "k8s-node"
spec:
  type: NodePort
  #use selector to pick which pods to target 
  ports:
  - protocol: TCP
    #the port on which the service is accessed.
    port: 80
    #targets TCP port 80 on any Pod with the devsecops label.
    targetPort: 3000
    #nodePort ranges from 30000-32767
    #the open port on the node
    nodePort: 30007
  selector:
    app: "k8s-node"
