kubernetes/service-external.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations:
    #service.beta.kubernetes.io/aws-load-balancer-type: alb
    kubernetes.io/ingress.class: alb
  name: "k8s-node-service"
  namespace: "default"
  labels:
    app: "k8s-node"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 3000
  selector:
    app: "k8s-node"
  type: "LoadBalancer"
