kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
  name: hello-ingress
  namespace: hello-app
spec:
  rules:
    - host: betty.eks.intern.aws.labshare.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-hub
                port: 
                  number: 80
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
      - betty.eks.intern.aws.labshare.org
      secretName: hello-tls
